--- a/src/web/css/round-switch.css
+++ b/src/web/css/round-switch.css
@@ -1,5 +1,5 @@
 /**
- * @author Nick Denry
+ * @author Samuele Longhin
  * @project yii2-round-switch-column
  * Created on: 14.03.2018, 0:01:41
  */
